// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <tr data-testid="shared-via">
        <th scope="col" class="oc-pr-s">Shared via</th>
        <td>
          <router-link-stub tag="a" to="[object Object]"><span>/Shares</span></router-link-stub>
        </td>
      </tr>
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 2`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <tr data-testid="shared-by">
        <th scope="col" class="oc-pr-s">Shared by</th>
        <td><span>Marie Curie</span></td>
      </tr>
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 21, 2015, 7:28 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span>(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy EOS path" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy direct link" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub arialabel="" size="medium"></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">Oct 20, 2015, 6:15 AM</oc-button-stub>
        </td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <tr data-testid="versionsInfo">
        <th scope="col" class="oc-pr-s">Versions</th>
        <td>
          <oc-button-stub type="button" size="medium" arialabel="See all versions" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">1</oc-button-stub>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy EOS path" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy direct link" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>Oct 21, 2015, 7:28 AM</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span>(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
      <tr data-testid="tags">
        <th scope="col" class="oc-pr-s">Tags</th>
        <td>
          <router-link-stub tag="a" to="[object Object]"><span><span class="oc-mr-xs">moon,</span></span></router-link-stub>
          <router-link-stub tag="a" to="[object Object]"><span><span>mars</span></span></router-link-stub>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>Oct 21, 2015, 7:28 AM</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>Oct 21, 2015, 7:28 AM</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub type="button" size="medium" arialabel="Copy EOS path" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy direct link" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>Oct 21, 2015, 7:28 AM</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div class="details-icon-wrapper oc-width-1-1 oc-flex oc-flex-middle oc-flex-center oc-mb">
      <oc-resource-icon-stub resource="[object Object]" size="xxxlarge" class="details-icon"></oc-resource-icon-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]" target=""></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This folder has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>Oct 21, 2015, 7:28 AM</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">EOS Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub type="button" size="medium" arialabel="Copy EOS path" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub type="button" size="medium" arialabel="Copy direct link" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
              <oc-icon-stub name="clipboard" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <!---->
    </table>
  </div>
</div>
`;
